syntax = "proto3";

option go_package = "gitlab.com/myCoin/coin-service/jsonapi/app/proto/pbError";

package pbError;

message CustomError {
  uint32 errorType = 1;
  string humanText = 2;
  string developText = 3;
  string err = 4;
  string path = 5;
  optional string context = 6;
}
